tests/golden/snapshots/golden_battle__治疗战斗_角色受伤后治疗.snap
---
source: tests/golden_battle.rs
assertion_line: 129
expression: record
---
entries:
  - DamageApplied:
      target: 4294967295
      target_name: 战士
      target_faction: Player
      attacker: 4294967294
      attacker_name: 哥布林
      attacker_faction: Enemy
      amount: 5
      is_skill: false
      terrain_label: 草
      target_coord:
        - 0
        - 0
  - HealApplied:
      target: 4294967295
      target_name: 战士
      amount: 3
turn_number: 0
